# mini-jam-139-fae-coin

./: Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
src/: anim.rs  app_state.rs  base.rs  boost_item.rs  cloud.rs  coin.rs  coin_camera.rs  coin_launch_ui.rs  end_ui.rs  fairy.rs  game_assets.rs  ingame_ui.rs  level.rs  lib.rs  loading_ui.rs  main.rs  main_menu_ui.rs  math.rs  physics.rs  scores.rs
