[package]
name = "mini_jam_139_fae_coin"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = "0.11.2"
bevy_asset_loader = { version = "0.17.0", features = ["progress_tracking"] }
iyes_progress = "0.9.1"
rand = "0.8.5"
